--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,9 @@
 = @user.name
 #follow_form
+= render 'stats'
+-if current_user.id != @user.id
   - if current_user.following?(@user)
     = render 'unfollow'
   - else
     = render 'follow'
+
