--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,17 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     .wrapper
+      -if user_signed_in?
+        .header
+          .account
+            .account__title
+              = link_to 'Home', '/'
+            .account__name
+              アカウント名
+              = current_user.name
+            .account__cog
+              = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'
+              = link_to user_path(current_user) do
+                マイページ
+
       = yield
