--- a/app/views/users/show_follow.html.haml
+++ b/app/views/users/show_follow.html.haml
@@ -9,5 +9,5 @@
     %h3= @title
     - if @users.any?
       -@users.each do |user|
-        %ul.users.follow
+        .user-name
           =user.name
